# curr_bot_v2

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  docker-compose.miner_geth.yml  docker-compose.yaml  pyproject.toml  test.py  tests.py
abstract/: const.py  env.py  exchange.py  instrument.py  logger_wrapper.py  path_chain.py  path_const.py  token.py
binance_pairs_parser/: Pipfile
binance_pairs_parser/src/: __main__.py  env.py
binance_price_parser/: Pipfile
binance_price_parser/src/: __main__.py  binance.py  const.py  env.py
data/redis/: dump.rdb
enviroment_provider/: Pipfile  __main__.py  const.py
indicator_maker/: __main__.py  env.py
inmemory_storage/: env.py  kv_db.py
inmemory_storage/path_db/: env.py  path_db.py
inmemory_storage/sync_db/: env.py  sync_db.py
last_price_api/: Dockerfile  Pipfile  __main__.py  const.py  env.py  icons.py
management_api/: Pipfile  __main__.py  env.py  healthcheck.py
message_broker/: async_rmq_connection.py  env.py  message_broker.py
miner_geth/: env.py
miner_price_parser_binance/: __main__.py  binance_book_ticker_msg.py  const.py
miner_price_parser_uniswap/: Dockerfile  __main__.py  env.py
net_node/: __init__.py
notifier_db/: env.py  models.py  notifier_db.py
notifier_tg_bot/: __main__.py
pairs_parser_binance/: __main__.py  env.py
pairs_parser_uniswap/: __main__.py  const.py  env.py
path_parser_uniswap/: Dockerfile  __main__.py  env.py
pool_observer/: __main__.py
price_parser_binance/: __main__.py  env.py
price_parser_uniswap/: Dockerfile  __main__.py  const.py  env.py
price_parser_uniswap_v2/: __main__.py  env.py
price_prser_uniswap_v2/: __main__.py
test/: abstract.py  uniswap_price_parser.py
tg_bot/: .env  Dockerfile  Pipfile  __main__.py  calc_server_rpyc_connector.py  const.py  main_server_connector.py
tg_bot_management/: __main__.py  const.py  env.py  main_server_connector.py
tg_bot_notification_handler/: __main__.py  env.py
tg_bot_notifier/: __main__.py  env.py
uniswap_pairs_parser/: Pipfile
uniswap_path_parser/: Dockerfile  Pipfile
(+79 files in other folders)
