[tool.poetry]
name = "curr-bot-v2"
version = "0.1.0"
description = ""
authors = ["mama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.5"
web3 = "^6.11.1"
rpyc = "^5.3.1"
jinja2 = "^3.1.2"
pytest = "^7.4.2"
aio-pika = "^9.3.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
aiohttp = "^3.8.6"
dateparser = "^1.1.8"
httpx = "^0.25.0"
aio-binance-library = "^2.0.7"
redis = "^5.0.1"
python-multipart = "^0.0.6"
redis-lock = "^0.2.0"
redlock-py = "^1.0.8"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 180
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"