[tool.poetry]
name = "curr-bot-v2"
version = "0.1.0"
description = ""
authors = ["mama tvoia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-telegram-bot = "^20.5"
rpyc = "^5.3.1"
jinja2 = "^3.1.2"
pytest = "^7.4.2"
aio-pika = "^9.3.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
aioredis = "^2.0.1"
aiohttp = "^3.8.6"
dateparser = "^1.1.8"
httpx = "^0.25.0"
aio-binance-library = "^2.0.7"
env = "^0.1.0"
redis = "^5.0.1"
redlock-py = "^1.0.8"
web3 = "^6.17.2"
uniswap-python = "^0.7.1"
python-multipart = "^0.0.9"
simplejson = "^3.19.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

